Wrapping things up, map, map_overlay, abstract, youtube fullscreen start stop, facebook comment

--- a/public/template/4/assets/map.css
+++ b/public/template/4/assets/map.css
@@ -41,6 +41,13 @@ g[data-point].active .start path {
   fill:#1E1E1E;
   /*stroke:#262626;*/
 }
+.tip rect {
+  fill:#fff;
+}
+.tip text {
+  font:12px OpenSans;
+  fill: #000;
+}
 /*svg .point:hover {
 
 }
